--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -145,21 +145,21 @@ DFILE_ACCEPT_SOCKET_EVT:
 
 FILLP_LINK_EVT:
   __BASE: {type: FAULT, level: MINOR, desc: fillp link disconnect}
-  sockIdx: {type: UINT32, desc: fillp socket index}
-  linkEvtType: {type: UINT8, desc: fillp link event type}
+  SOCK_IDX: {type: UINT32, desc: fillp socket index}
+  LINK_EVT_TYPE: {type: UINT8, desc: fillp link event type}
 
 FILLP_PKT_EVT:
   __BASE: {type: STATISTIC, level: MINOR, desc: fillp data package event}
-  sockIdx: {type: UINT32, desc: fillp socket index}
-  pktEvtType: {type: UINT8, desc: fillp package event type}
-  dropCnt: {type: UINT32, desc: fillp package dropcnt}
+  SOCK_IDX: {type: UINT32, desc: fillp socket index}
+  PKT_EVT_TYPE: {type: UINT8, desc: fillp package event type}
+  DROP_CNT: {type: UINT32, desc: fillp package dropcnt}
 
 FILLP_SOCK_QOS_EVT:
   __BASE: {type: STATISTIC, level: MINOR, desc: fillp socket Qos event}
-  sockIdx: {type: UINT32, desc: fillp socket index}
-  rtt: {type: UINT32, desc: fillp socket rtt}
-  recvPktLoss: {type: UINT32, desc: fillp socket recv package loss}
-  recvRateBps: {type: UINT64, desc: fillp socket recv rate}
-  sendPktLoss: {type: UINT32, desc: fillp socket send package loss}
-  sendRateBps: {type: UINT64, desc: fillp socket send rate}
-  jitter: {type: UINT64, desc: fillp socket jitter}
+  SOCK_IDX: {type: UINT32, desc: fillp socket index}
+  RTT: {type: UINT32, desc: fillp socket rtt}
+  RECV_PKT_LOSS: {type: UINT32, desc: fillp socket recv package loss}
+  RECV_RATE_BPS: {type: UINT64, desc: fillp socket recv rate}
+  SEND_PKT_LOSS: {type: UINT32, desc: fillp socket send package loss}
+  SEND_RATE_BPS: {type: UINT64, desc: fillp socket send rate}
+  JITTER: {type: UINT64, desc: fillp socket jitter}
