fix dfile hievent yaml
Signed-off-by: “ <wangmingqi@huawei.com>

--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -122,7 +122,7 @@ BUS_CENTER_DURATION:
 
 DFILE_WAIT_HEADER_TIMEOUT_EVT:
   __BASE: {type: FAULT, level: CRITICAL, desc: wait file header time out}
-  errorCode: {type: STRING, desc: error code}
+  ERROR_CODE: {type: STRING, desc: error code}
 
 DFILE_SERVER_CREATE_EVT:
   __BASE: {type: BEHAVIOR, level: MINOR, desc: server created}
@@ -138,7 +138,7 @@ DFILE_PEER_SHUTTED_EVT:
 
 DFILE_TRANS_COMPLETE_EVT:
   __BASE: {type: STATISTIC, level: MINOR, desc: transfer complete}
-  transRate: {type: STRING, desc: transmission speed}
+  TRANSRATE: {type: STRING, desc: transmission speed}
 
 DFILE_ACCEPT_SOCKET_EVT:
   __BASE: {type: BEHAVIOR, level: MINOR, desc: accept socket}
