refactor sqlite utils
Signed-off-by: jeosif <liubao6@huawei.com>
Change-Id: I6f5358dc0850fd8d8777a91e13eb3fce0bb15968

--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -25,7 +25,6 @@ ohos_unittest("LNNTest") {
     "unittest/lane_test.cpp",
     "unittest/ledger_lane_hub_test.cpp",
     "unittest/net_builder_test.cpp",
-    "unittest/sqlite3_utils_test.cpp",
   ]
 
   include_dirs = [
@@ -62,8 +61,38 @@ ohos_unittest("LNNTest") {
     "$dsoftbus_root_path/core/frame:softbus_server",
     "//base/security/device_auth/services:deviceauth_sdk",
     "//third_party/googletest:gtest_main",
+  ]
+
+  if (is_standard_system) {
+    external_deps = [
+      "c_utils:utils",
+      "hiviewdfx_hilog_native:libhilog",
+    ]
+  } else {
+    external_deps = [
+      "c_utils:utils",
+      "hilog:libhilog",
+    ]
+  }
+}
+
+ohos_unittest("SqliteTest") {
+  module_out_path = module_output_path
+  sources = [ "unittest/sqlite3_utils_test.cpp" ]
+
+  include_dirs = [
+    "$dsoftbus_root_path/adapter/common/include",
+    "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/interfaces/kits/bus_center",
+    "$dsoftbus_root_path/interfaces/kits/common",
+    "//commonlibrary/c_utils/base/include",
+  ]
+
+  deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "//third_party/googletest:gtest_main",
     "//third_party/sqlite:sqlite",
-    "//utils/native/base:utils",
   ]
 
   if (is_standard_system) {
@@ -90,7 +119,10 @@ enhanced_test = exec_script("$dsoftbus_root_path/check_sub_module.py",
 
 group("unittest") {
   testonly = true
-  deps = [ ":LNNTest" ]
+  deps = [
+    ":LNNTest",
+    ":SqliteTest",
+  ]
   if (enhanced_test) {
     deps += [
       "$dsoftbus_root_path/dsoftbus_enhance/test/core/bus_center/lnn/lane_hub/lane_channel_rating:unittest",
