--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -130,6 +130,7 @@ if (defined(ohos_lite)) {
     include_dirs = [
       "$dsoftbus_root_path/interfaces/kits/common",
       "$dsoftbus_root_path/core/bus_center/utils/include",
+      "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/components/nstackx/fillp/include",
       "$dsoftbus_root_path/components/nstackx/nstackx_core/dfile/interface",
       "$dsoftbus_root_path/components/nstackx/nstackx_util/interface",
@@ -138,8 +139,6 @@ if (defined(ohos_lite)) {
       "//third_party/bounds_checking_function/include",
     ]
     include_dirs += conn_common_inc + trans_common_inc
-    sources = common_utils_src
-    sources += conn_common_src + trans_common_src
     dfx_source = [
       "dfx/hidumper_adapter/softbus_hidumper.c",
       "dfx/hidumper_adapter/softbus_hidumper_interface.c",
@@ -150,7 +149,8 @@ if (defined(ohos_lite)) {
       "dfx/hidumper_adapter/softbus_hidumper_buscenter.c",
       "dfx/hisysevent_adapter/softbus_hisysevt_nstack.c",
     ]
-    sources += dfx_source
+    sources = common_utils_src + conn_common_src + trans_common_src + dfx_source
+    sources += [ "$dsoftbus_root_path/core/common/utils/sqlite3_utils.c" ]
     defines = [ "DEFAULT_STORAGE_PATH=\"/data/service/el1/public\"" ]
     defines += [ "SOFTBUS_STANDARD_SYSTEM" ]
     defines += [ "__STDC_FORMAT_MACROS" ]
@@ -163,6 +163,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "//third_party/bounds_checking_function:libsec_shared",
       "//third_party/cJSON:cjson_static",
+      "//third_party/sqlite:sqlite",
     ]
     if (!enhanced) {
       cflags += [ "-DFILLP_ENHANCED" ]
