--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -61,7 +61,6 @@ config("dsoftbus_sdk_interface") {
     "$dsoftbus_root_path/interfaces/kits/transport",
     "$dsoftbus_root_path/sdk/transmission/session/cpp/include",
     "$dsoftbus_root_path/interfaces/inner_kits/transport",
-    "//third_party/bounds_checking_function/include",
   ]
 }
 
@@ -69,7 +68,7 @@ target(build_type, "softbus_client") {
   sources = common_client_src
   include_dirs = common_client_inc
   deps = common_client_deps
-  public_configs = [ ":dsoftbus_sdk_interface" ]
+  all_dependent_configs = [ ":dsoftbus_sdk_interface" ]
   defines = TRANS_SDK_DEFINES
 
   if (defined(ohos_lite)) {
