构建决策中心感知模块
Signed-off-by: 18734571586 <wangxiaohui41@huawei.com>

--- a/core/adapter/core_adapter.gni
+++ b/core/adapter/core_adapter.gni
@@ -29,8 +29,10 @@ declare_args() {
 if (defined(ohos_lite)) {
   bus_center_core_adapter_src = [ "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor_virtual.cpp" ]
 
-  bus_center_core_adapter_inc =
-      [ "$dsoftbus_root_path/core/adapter/bus_center/include" ]
+  bus_center_core_adapter_inc = [
+    "$dsoftbus_root_path/core/adapter/bus_center/include",
+    "$dsoftbus_root_path/core/bus_center/utils/include",
+  ]
 
   bus_center_core_adapter_deps = []
 } else {
