--- a/adapter/common/bus_center/bus_center_adapter.gni
+++ b/adapter/common/bus_center/bus_center_adapter.gni
@@ -101,12 +101,15 @@ if (defined(ohos_lite)) {
       "$adapter_bus_center_path/network/lnn_netlink_monitor.c",
       "$adapter_bus_center_path/platform/lnn_product_monitor_virtual.c",
     ]
-    if (dsoftbus_feature_lnn_wifiservice_dependence) {
+    if (dsoftbus_feature_lnn_wifiservice_dependence && has_ces_part) {
       bus_center_adapter_src +=
           [ "$adapter_bus_center_path/wlan/lnn_wifiservice_monitor.cpp" ]
       bus_center_adapter_inc += [
+        "//base/notification/common_event_service/interfaces/inner_api",
         "//foundation/communication/wifi/wifi/interfaces/innerkits/native_cpp/wifi_standard/interfaces",
         "//foundation/communication/wifi/wifi/services/wifi_standard/wifi_framework/common/net_helper",
+        "//foundation/communication/wifi/wifi/frameworks/native/interfaces",
+        "//foundation/communication/wifi/wifi/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
       ]
       bus_center_adapter_deps += []
     } else {
@@ -121,8 +124,10 @@ if (dsoftbus_feature_lnn_net) {
   if (dsoftbus_feature_conn_br || dsoftbus_feature_conn_ble) {
     bus_center_adapter_src +=
         [ "$adapter_bus_center_path/network/lnn_bt_monitor.c" ]
-    bus_center_adapter_inc +=
-        [ "$softbus_adapter_common/net/bluetooth/include" ]
+    bus_center_adapter_inc += [
+      "$softbus_adapter_common/net/bluetooth/include",
+      "//foundation/communication/wifi/wifi/frameworks/native/interfaces",
+    ]
   } else {
     bus_center_adapter_src +=
         [ "$adapter_bus_center_path/network/lnn_bt_monitor_virtual.c" ]
