--- a/adapter/default_config/feature_config/standard/config.gni
+++ b/adapter/default_config/feature_config/standard/config.gni
@@ -34,7 +34,7 @@ declare_args() {
   dsoftbus_feature_lnn_heartbeat = true
   dsoftbus_feature_lnn_meta_node = true
   dsoftbus_feature_qos = true
-  dsoftbus_feature_lnn_wifiservice_dependence = false
+  dsoftbus_feature_lnn_wifiservice_dependence = true
 
   dsoftbus_feature_build_shared_sdk = true
   dsoftbus_feature_ifname_prefix = false
