--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -179,30 +179,12 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_thread.c",
       "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_timer.c",
       "$softbus_adapter_common/log/softbus_adapter_log.c",
+      "$softbus_adapter_common/range/softbus_adapter_range.c",
     ]
     public_deps = [
       "//base/startup/init/interfaces/innerkits:libbegetutil",
       "//third_party/bounds_checking_function:libsec_static",
     ]
-
-    native_source_path = rebase_path("$dsoftbus_root_path")
-
-    ble_enhanced_impl =
-        "dsoftbus_enhance/adapter/common/range/softbus_adapter_range.c"
-    enhanced_range = exec_script("$dsoftbus_root_path/check_sub_module.py",
-                                 [
-                                   "$native_source_path",
-                                   "$ble_enhanced_impl",
-                                 ],
-                                 "value")
-
-    if (enhanced_range) {
-      include_dirs += [ "//base/msdp/algorithm/ble_range/include" ]
-      sources += [ "$dsoftbus_root_path/dsoftbus_enhance/adapter/common/range/softbus_adapter_range.c" ]
-      public_deps += [ "//base/msdp/algorithm/ble_range:msdp_ble_range" ]
-    } else {
-      sources += [ "$softbus_adapter_common/range/softbus_adapter_range.c" ]
-    }
 
     if (dsoftbus_feature_encrypt == 0) {
       sources += [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c" ]
