fix:QosReport become an internal interface, and then rectify
Signed-off-by: zhanghaowen <zhanghaowen12@huawei.com>

--- a/tests/sdk/transmission/fuzztest/qosreport_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/qosreport_fuzzer/BUILD.gn
@@ -28,6 +28,7 @@ ohos_fuzztest("QosReportFuzzTest") {
     "//foundation/communication/dsoftbus/core/common/include",
     "//foundation/communication/dsoftbus/interfaces/kits/common",
     "//foundation/communication/dsoftbus/interfaces/inner_kits/transport",
+    "//foundation/communication/dsoftbus/sdk/transmission/session/include",
     "//commonlibrary/c_utils/base/include",
     "//third_party/bounds_checking_function/include",
   ]
