--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -70,6 +70,7 @@ if (dsoftbus_feature_lnn_net) {
   }
   if (dsoftbus_feature_lnn_heartbeat) {
     bus_center_hub_inc += [
+      "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
       "$dsoftbus_core_path/core/adapter/bus_center/include",
       "$dsoftbus_core_path/core/authentication/include",
       "$dsoftbus_core_path/connection/p2p/interface",
@@ -101,7 +102,7 @@ if (dsoftbus_feature_lnn_net && dsoftbus_feature_lnn_time_sync && enhanced) {
   bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/time_sync:dsoftbus_time_sync_impl" ]
 }
 if (dsoftbus_feature_lnn_net && dsoftbus_feature_lnn_heartbeat && enhanced) {
-  bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/heartbeat:dsoftbus_heartbeat_impl" ]
+  bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/heartbeat:dsoftbus_ble_heartbeat" ]
 }
 if (dsoftbus_feature_lnn_net && dsoftbus_feature_qos && enhanced) {
   bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/lane_statistics:dsoftbus_lane_statistics" ]
