--- a/core/bus_center/lnn/net_ledger/net_ledger.gni
+++ b/core/bus_center/lnn/net_ledger/net_ledger.gni
@@ -33,7 +33,14 @@ if (dsoftbus_feature_lnn_meta_node) {
 bus_center_ledger_inc = [
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
+  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/include",
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
   "$dsoftbus_root_path/core/bus_center/utils/include",
 ]
 bus_center_ledger_deps = []
+
+if (defined(ohos_lite)) {
+  bus_center_ledger_src += [ "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/src/lnn_decision_db_virtual.c" ]
+} else {
+  bus_center_ledger_src += [ "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/src/lnn_decision_db.c" ]
+}
