build heartbeat filter by saving udid after each networking
Signed-off-by: jeosif <liubao6@huawei.com>
Change-Id: Ife5c4ba4e091e2a3dd73e7f40be1125fc2480dfd

--- a/core/bus_center/bus_center_server.gni
+++ b/core/bus_center/bus_center_server.gni
@@ -64,8 +64,9 @@ bus_center_server_external_deps = []
 
 if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
-    bus_center_server_src +=
-        [ "$dsoftbus_root_path/core/bus_center/ipc/mini/lnn_bus_center_ipc.c" ]
+    bus_center_server_src += [
+      "$dsoftbus_root_path/core/bus_center/ipc/mini/lnn_bus_center_ipc.c",
+    ]
   } else {
     bus_center_server_src += [
       "$dsoftbus_root_path/core/bus_center/ipc/small/src/bus_center_client_proxy.c",
