--- a/tests/sdk/common/BUILD.gn
+++ b/tests/sdk/common/BUILD.gn
@@ -33,8 +33,10 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/interfaces/kits/common",
       "//base/security/access_token/interfaces/innerkits/token_setproc/include",
       "//base/security/access_token/interfaces/innerkits/nativetoken/include",
+      "//base/security/access_token/interfaces/innerkits/accesstoken/include",
     ]
     deps = [
+      "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
       "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
       "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
     ]
