use huks to encrypt trusted dev info table
Signed-off-by: jeosif <liubao6@huawei.com>
Change-Id: Ib9db2a64148ac172e9e3510ba7ee9152ab9ddff4

--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -26,6 +26,7 @@ ohos_unittest("LNNTest") {
     "net_builder/lnn_topo_manager_test.cpp",
     "unittest/lane_test.cpp",
     "unittest/ledger_lane_hub_test.cpp",
+    "unittest/lnn_huks_test.cpp",
     "unittest/net_builder_test.cpp",
   ]
 
@@ -56,6 +57,7 @@ ohos_unittest("LNNTest") {
     "$dsoftbus_root_path/core/discovery/manager/include",
     "$dsoftbus_root_path/core/discovery/interface",
     "$dsoftbus_root_path/interfaces/kits/discovery",
+    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
   ]
 
   deps = [
@@ -75,6 +77,7 @@ ohos_unittest("LNNTest") {
     external_deps = [
       "c_utils:utils",
       "hilog:libhilog",
+      "huks:libhukssdk",
     ]
   }
 }
@@ -134,38 +137,6 @@ ohos_unittest("LNNNetBuilderTest") {
   }
 }
 
-ohos_unittest("SqliteTest") {
-  module_out_path = module_output_path
-  sources = [ "unittest/sqlite3_utils_test.cpp" ]
-
-  include_dirs = [
-    "$dsoftbus_root_path/adapter/common/include",
-    "$dsoftbus_root_path/core/common/include",
-    "$dsoftbus_root_path/interfaces/kits/bus_center",
-    "$dsoftbus_root_path/interfaces/kits/common",
-    "//commonlibrary/c_utils/base/include",
-  ]
-
-  deps = [
-    "$dsoftbus_root_path/adapter:softbus_adapter",
-    "$dsoftbus_root_path/core/common:softbus_utils",
-    "//third_party/googletest:gtest_main",
-    "//third_party/sqlite:sqlite",
-  ]
-
-  if (is_standard_system) {
-    external_deps = [
-      "c_utils:utils",
-      "hiviewdfx_hilog_native:libhilog",
-    ]
-  } else {
-    external_deps = [
-      "c_utils:utils",
-      "hilog:libhilog",
-    ]
-  }
-}
-
 native_source_path = rebase_path("$dsoftbus_root_path")
 dep_dir = "dsoftbus_enhance/core/bus_center/lnn/lane_hub"
 enhanced_test = exec_script("$dsoftbus_root_path/check_sub_module.py",
@@ -180,7 +151,6 @@ group("unittest") {
   deps = [
     ":LNNNetBuilderTest",
     ":LNNTest",
-    ":SqliteTest",
   ]
   if (enhanced_test) {
     deps += [
