--- a/tests/core/common/utils/BUILD.gn
+++ b/tests/core/common/utils/BUILD.gn
@@ -43,8 +43,43 @@ if (defined(ohos_lite)) {
     deps = [ "$dsoftbus_root_path/core/common:softbus_utils" ]
   }
 
+  ohos_unittest("SqliteTest") {
+    module_out_path = module_output_path
+    sources = [ "unittest/sqlite3_utils_test.cpp" ]
+
+    include_dirs = [
+      "$dsoftbus_root_path/adapter/common/include",
+      "$dsoftbus_root_path/core/common/include",
+      "$dsoftbus_root_path/interfaces/kits/bus_center",
+      "$dsoftbus_root_path/interfaces/kits/common",
+      "//commonlibrary/c_utils/base/include",
+    ]
+
+    deps = [
+      "$dsoftbus_root_path/adapter:softbus_adapter",
+      "$dsoftbus_root_path/core/common:softbus_utils",
+      "//third_party/googletest:gtest_main",
+      "//third_party/sqlite:sqlite",
+    ]
+
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
+
   group("unittest") {
     testonly = true
-    deps = [ ":softbus_utils_test" ]
+    deps = [
+      ":SqliteTest",
+      ":softbus_utils_test",
+    ]
   }
 }
