--- a/core/bus_center/bus_center_server.gni
+++ b/core/bus_center/bus_center_server.gni
@@ -62,9 +62,8 @@ bus_center_server_inc += [
 
 if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
-    bus_center_server_src += [
-      "$dsoftbus_root_path/core/bus_center/ipc/mini/lnn_bus_center_ipc.c",
-    ]
+    bus_center_server_src +=
+        [ "$dsoftbus_root_path/core/bus_center/ipc/mini/lnn_bus_center_ipc.c" ]
   } else {
     bus_center_server_src += [
       "$dsoftbus_root_path/core/bus_center/ipc/small/src/bus_center_client_proxy.c",
@@ -89,7 +88,9 @@ if (defined(ohos_lite)) {
     "//utils/system/safwk/native/include",
   ]
   bus_center_server_deps += [ "//utils/native/base:utils" ]
-  bus_center_server_external_deps = bus_center_adapter_external_deps
+  bus_center_server_external_deps =
+      bus_center_adapter_external_deps + bus_center_ledger_external_deps
+  bus_center_server_external_deps += [ "c_utils:utils" ]
 }
 
 native_source_path = rebase_path("$dsoftbus_root_path")
