公共基础库老路径及部件依赖清零
Signed-off-by: chenchunlin4 <chenchunlin4@huawei.com>

--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -32,6 +32,9 @@ dsoftbus_server_common_inc =
 dsoftbus_server_common_deps =
     auth_server_deps + bus_center_server_deps + conn_manager_deps +
     disc_server_deps + trans_session_deps + softbus_permission_deps
+dsoftbus_server_common_external_deps =
+    bus_center_server_external_deps + disc_server_external_deps +
+    softbus_permission_external_deps + trans_session_external_deps
 
 if (defined(ohos_lite)) {
   copy("permission_json") {
@@ -190,7 +193,7 @@ if (defined(ohos_lite)) {
       "//third_party/cJSON:cjson_static",
     ]
     if (is_standard_system) {
-      external_deps = bus_center_server_external_deps
+      external_deps = dsoftbus_server_common_external_deps
       external_deps += [
         "access_token:libaccesstoken_sdk",
         "access_token:libprivacy_sdk",
