--- a/core/bus_center/bus_center_server.gni
+++ b/core/bus_center/bus_center_server.gni
@@ -87,8 +87,8 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/sdk/frame/$os_type/include",
     "//utils/system/safwk/native/include",
   ]
-  bus_center_server_deps += [ "//utils/native/base:utils" ]
   bus_center_server_external_deps = bus_center_adapter_external_deps
+  bus_center_server_external_deps += [ "c_utils:utils" ]
 }
 
 native_source_path = rebase_path("$dsoftbus_root_path")
