公共基础库老路径及部件依赖清零
Signed-off-by: chenchunlin4 <chenchunlin4@huawei.com>

--- a/core/discovery/disc.gni
+++ b/core/discovery/disc.gni
@@ -49,5 +49,5 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/core/discovery/ipc/$os_type/include",
     "//utils/system/safwk/native/include",
   ]
-  disc_server_external_deps += [ "c_utils:utils" ]
+  disc_server_external_deps = [ "c_utils:utils" ]
 }
