--- a/core/common/security/permission/permission.gni
+++ b/core/common/security/permission/permission.gni
@@ -13,6 +13,8 @@
 
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
+softbus_permission_external_deps = []
+
 if (defined(ohos_lite)) {
   softbus_permission_inc = [
     "$dsoftbus_core_path/common/security/permission/include",
@@ -44,5 +46,5 @@ if (defined(ohos_lite)) {
     "$dsoftbus_core_path/common/security/permission/$os_type/softbus_permission.cpp",
   ]
   softbus_permission_deps = [ "//third_party/cJSON:cjson_static" ]
-  softbus_permission_external_deps = [ "c_utils:utils" ]
+  softbus_permission_external_deps += [ "c_utils:utils" ]
 }
