Add udp channel process in lnn node off line
Signed-off-by: breakfei1 <zhangshen6@huawei.com>

--- a/core/transmission/trans_channel/udp_negotiation/udp_negotiation.gni
+++ b/core/transmission/trans_channel/udp_negotiation/udp_negotiation.gni
@@ -27,4 +27,7 @@ if (dsoftbus_feature_trans_udp == true) {
     "$udp_channel_path/src/trans_udp_channel_manager_virtual.c",
   ]
 }
-trans_udp_channel_inc = [ "$udp_channel_path/include" ]
+trans_udp_channel_inc = [
+  "$udp_channel_path/include",
+  "$dsoftbus_root_path/core/bus_center/service/include",
+]
