--- a/tests/core/transmission/trans_channel/auth_channel/BUILD.gn
+++ b/tests/core/transmission/trans_channel/auth_channel/BUILD.gn
@@ -16,9 +16,9 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 module_output_path = "dsoftbus/transmission"
 
-ohos_unittest("TransTcpDirectCoreTest") {
+ohos_unittest("TransAuthChannelCoreTest") {
   module_out_path = module_output_path
-  sources = [ "unittest/trans_tcp_direct_test.cpp" ]
+  sources = [ "unittest/trans_auth_channel_test.cpp" ]
 
   include_dirs = [
     "$softbus_adapter_common/include",
@@ -27,7 +27,6 @@ ohos_unittest("TransTcpDirectCoreTest") {
     "$dsoftbus_root_path/interfaces/kits/discovery",
     "$dsoftbus_root_path/core/discovery/manager/include",
     "$dsoftbus_root_path/core/discovery/coap/include",
-
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/transmission/common/include",
@@ -37,10 +36,8 @@ ohos_unittest("TransTcpDirectCoreTest") {
     "$dsoftbus_root_path/core/transmission/session/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
     "$dsoftbus_root_path/core/transmission/pending_packet/include",
-
     "//commonlibrary/c_utils/base/include",
     "unittest/common/",
-
     "//commonlibrary/c_utils/base/include",
     "unittest/common/",
     "$dsoftbus_root_path/core/authentication/include",
@@ -68,7 +65,7 @@ ohos_unittest("TransTcpDirectCoreTest") {
     "//base/security/device_auth/interfaces/innerkits",
     "//third_party/cJSON",
     "$dsoftbus_root_path/core/adapter/bus_center/include",
-
+    "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
     "$dsoftbus_root_path/interfaces/kits/transport",
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/interfaces/kits",
@@ -95,5 +92,5 @@ ohos_unittest("TransTcpDirectCoreTest") {
 
 group("unittest") {
   testonly = true
-  deps = [ ":TransTcpDirectCoreTest" ]
+  deps = [ ":TransAuthChannelCoreTest" ]
 }
