fixed 4c7ad78 from https://gitee.com/jeosif/communication_dsoftbus/pulls/2469 debug default to bypass disc
Signed-off-by: jeosif <liubao6@huawei.com>
Change-Id: Ic33b28322c5524ddc73aab2bb87ccf957399257e

--- a/core/discovery/ble/disc_ble.gni
+++ b/core/discovery/ble/disc_ble.gni
@@ -14,6 +14,7 @@
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 ble_discovery_inc = [
+  "$dsoftbus_root_path/core/adapter/bus_center/include",
   "$dsoftbus_root_path/core/discovery/ble/include",
   "$dsoftbus_root_path/core/common/include",
 ]
