--- a/tests/sdk/discovery/unittest/BUILD.gn
+++ b/tests/sdk/discovery/unittest/BUILD.gn
@@ -24,8 +24,12 @@ if (defined(ohos_lite)) {
       include_dirs = [
         "$dsoftbus_root_path/interfaces/kits/discovery",
         "$dsoftbus_root_path/interfaces/kits/common",
+        "$dsoftbus_root_path/tests/sdk/common/include",
       ]
-      deps = [ "$dsoftbus_root_path/sdk:softbus_client" ]
+      deps = [
+        "$dsoftbus_root_path/sdk:softbus_client",
+        "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
+      ]
     }
   }
 } else {
@@ -48,9 +52,11 @@ if (defined(ohos_lite)) {
       "//third_party/bounds_checking_function/include",
       "unittest/common/",
       "$dsoftbus_root_path/sdk/discovery/manager/include",
+      "$dsoftbus_root_path/tests/sdk/common/include",
     ]
     deps = [
       "$dsoftbus_root_path/sdk:softbus_client",
+      "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
       "//third_party/bounds_checking_function:libsec_static",
       "//third_party/googletest:gtest_main",
     ]
