fix:gn is unreason
Signed-off-by: zhanghaowen <zhanghaowen12@huawei.com>

--- a/sdk/transmission/trans_channel/udp/file/file_sdk.gni
+++ b/sdk/transmission/trans_channel/udp/file/file_sdk.gni
@@ -44,18 +44,21 @@ if (dsoftbus_feature_trans_udp_file == true) {
                                      ],
                                      "value")
   if (enhanced) {
+    trans_file_sdk_inc += [
+      "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile/interface",
+      "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_util/interface",
+    ]
+    trans_file_sdk_deps += [ "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile:nstackx_dfile" ]
     if (enhanced_huaweishare) {
       trans_file_sdk_inc += [
         "$dsoftbus_root_path/dsoftbus_enhance/interfaces/kits/transport",
         "$dsoftbus_root_path/dsoftbus_enhance/sdk/transmission/trans_channel/udp/file/include",
       ]
       trans_file_sdk_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/sdk/transmission/trans_channel/udp/file:dsoftbus_file_schema_service" ]
+    } else {
+      trans_file_sdk_src +=
+          [ "$dsoftbus_file_sdk_path/src/client_trans_file_schema_virtual.c" ]
     }
-    trans_file_sdk_inc += [
-      "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile/interface",
-      "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_util/interface",
-    ]
-    trans_file_sdk_deps += [ "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile:nstackx_dfile" ]
   } else {
     trans_file_sdk_inc += [
       "$dsoftbus_root_path/components/nstackx/nstackx_core/dfile/interface",
